Added Character selection scene

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,11 +62,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Character.cs" />
+    <Compile Include="Assets\Scripts\CharacterUI.cs" />
     <Compile Include="Assets\Scripts\FaceUpdater.cs" />
     <Compile Include="Assets\Scripts\HighScore.cs" />
     <Compile Include="Assets\Scripts\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\SceneEvents.cs" />
     <Compile Include="Assets\Scripts\ScoreText.cs" />
+    <Compile Include="Assets\Scripts\SinglePlayerCharacterSelectionPlay.cs" />
     <Compile Include="Assets\Scripts\Stack.cs" />
     <Compile Include="Assets\Scripts\StackContainer.cs" />
     <Compile Include="Assets\Scripts\Void.cs" />
